--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,12 @@
     <title>Array de Palabras</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
-    <link rel="icon" href="favicon.png" type="image/png">
+    <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <body class="bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-600 font-sans min-h-screen flex flex-col items-center justify-center text-white">
-
+<audio id="beep-sound" src="audio/beep.mp3" preload="auto"></audio>
+<audio id="beep-sound2" src="audio/beep2.mp3" preload="auto"></audio>
+<audio id="beep-sound3" src="audio/beepFinal.mp3" preload="auto"></audio>
 <!-- Contenedor principal -->
 <section class="dark flex w-full flex-col items-center justify-center py-12 px-4">
 
@@ -57,7 +59,7 @@
 
 <div id="alert-container" class="hidden fixed top-0 left-0 w-full flex items-center justify-center p-4">
     <div class="bg-red-500 text-white font-bold rounded-lg border shadow-lg p-4">
-        Ya no hay más palabras.
+        <span id="alert-message">Mensaje de alerta</span>
     </div>
 </div>
 
