--- a/src/expresionexpress/www/index.html
+++ b/src/expresionexpress/www/index.html
@@ -8,10 +8,12 @@
     <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
-<body class="bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-600 font-sans min-h-screen flex flex-col items-center justify-center text-white">
+<!--<body class="bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-600 font-sans min-h-screen flex flex-col items-center justify-center text-white">-->
+<body id="body" class="bg-blue-500 font-sans min-h-screen flex flex-col items-center justify-center text-white">
 <audio id="beep-sound" src="audio/beep.mp3" preload="auto"></audio>
 <audio id="beep-sound2" src="audio/beep2.mp3" preload="auto"></audio>
 <audio id="beep-sound3" src="audio/beepFinal.mp3" preload="auto"></audio>
+
 <!-- Contenedor principal -->
 <section class="dark flex w-full flex-col items-center justify-center py-12 px-4">
 
@@ -36,9 +38,9 @@
 <!-- Cronómetro -->
 <section class="flex w-full flex-col items-center justify-center py-12 px-4">
 
-    <h2 id="seconds" class="text-4xl font-bold text-center tracking-tight">00</h2>
+    <!--<h2 id="seconds" class="text-4xl font-bold text-center tracking-tight">00</h2>-->
 
-    <div class="flex flex-col items-center mt-6">
+    <div class="flex flex-col items-center mt-1">
         <!-- Botones -->
         <div class="flex items-center justify-center gap-6">
             <button id="start" onclick="resume()"
