Se arreglan bugs de interval de cronómetro

--- a/src/expresionexpress/www/index.html
+++ b/src/expresionexpress/www/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <!--<body class="bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-600 font-sans min-h-screen flex flex-col items-center justify-center text-white">-->
-<body id="body" class="bg-blue-500 font-sans min-h-screen flex flex-col items-center justify-center text-white">
+<body id="body" class="bg-blue-300 font-sans min-h-screen flex flex-col items-center justify-center text-white">
 <audio id="beep-sound" src="audio/beep.mp3" preload="auto"></audio>
 <audio id="beep-sound2" src="audio/beep2.mp3" preload="auto"></audio>
 <audio id="beep-sound3" src="audio/beepFinal.mp3" preload="auto"></audio>
@@ -24,11 +24,11 @@
     <div class="w-full max-w-md bg-white text-gray-900 p-8 mt-8 rounded-3xl shadow-xl flex flex-col items-center gap-6">
 
         <!-- Palabra que se destaca -->
-        <h2 class="text-5xl font-extrabold tracking-wide text-indigo-600" id="word-display">Palabra</h2>
+        <h2 class="text-5xl font-extrabold tracking-wide text-blue-500" id="word-display">Palabra</h2>
 
         <!-- Botón para cambiar la palabra -->
         <button type="button" onclick="nextWord(); displayWord()"
-                class="px-6 py-3 bg-indigo-600 text-white hover:bg-indigo-700 focus:outline-none rounded-full transition-all duration-100 transform hover:scale-105">
+                class="px-6 py-3 bg-blue-500 text-white hover:bg-blue-500 focus:outline-none rounded-full transition-all duration-100 transform hover:scale-105">
             Siguiente
         </button>
     </div>
