--- a/src/expresionexpress/www/index.html
+++ b/src/expresionexpress/www/index.html
@@ -9,7 +9,7 @@
     <link rel="icon" href="images/favicon.png" type="image/png">
 </head>
 <!--<body class="bg-gradient-to-r from-blue-500 via-indigo-500 to-purple-600 font-sans min-h-screen flex flex-col items-center justify-center text-white">-->
-<body id="body" class="bg-blue-300 font-sans min-h-screen flex flex-col items-center justify-center text-white">
+<body id="body" class="bg-gray-800 font-sans min-h-screen flex flex-col items-center justify-center text-white">
 <audio id="beep-sound" src="audio/beep.mp3" preload="auto"></audio>
 <audio id="beep-sound2" src="audio/beep2.mp3" preload="auto"></audio>
 <audio id="beep-sound3" src="audio/beepFinal.mp3" preload="auto"></audio>
@@ -18,7 +18,7 @@
 <section class="dark flex w-full flex-col items-center justify-center py-12 px-4">
 
     <!-- Título principal -->
-    <h1 class="text-6xl font-bold text-center tracking-tight drop-shadow-lg">Expresión Express</h1>
+    <h1 class="text-3xl font-bold text-center tracking-tight drop-shadow-lg bg-black p-3 rounded-3xl">¡Define la palabra!</h1>
 
     <!-- Card que contiene el contenido principal -->
     <div class="w-full max-w-md bg-white text-gray-900 p-8 mt-8 rounded-3xl shadow-xl flex flex-col items-center gap-6">
@@ -43,13 +43,9 @@
     <div class="flex flex-col items-center mt-1">
         <!-- Botones -->
         <div class="flex items-center justify-center gap-6">
-            <button id="start" onclick="resume()"
+            <button id="start" onclick="buttonAction()"
                     class="px-6 py-3 bg-black text-white hover:bg-gray-900 focus:outline-none rounded-full transition-all duration-100 transform hover:scale-105">
-                Iniciar
-            </button>
-            <button id="pause" onclick="pause()"
-                    class="px-6 py-3 bg-black text-white hover:bg-gray-900 focus:outline-none rounded-full transition-all duration-100 transform hover:scale-105">
-                Pausar
+                <span id="button-word">Iniciar</span>
             </button>
             <button id="reset" onclick="resetClock()"
                     class="px-6 py-3 bg-black text-white hover:bg-gray-900 focus:outline-none rounded-full transition-all duration-100 transform hover:scale-105">
